fix boxwidth dunno why broken + variableEditor bug

--- a/src/frontend/view/css/DarkMode.css
+++ b/src/frontend/view/css/DarkMode.css
@@ -199,7 +199,7 @@
 }
 
 .text-field{
-    -fx-font-family: "Roboto";
+    -fx-font-family: "Roboto Light";
 }
 
 .line{
